styles/DarkMode.module.css
/* Custom Dark Mode Toggle Element */

.toggleThemeWrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 4px;
  margin: auto 0;
  padding-top: 1rem;
}

.toggleThemeWrapper span {
  font-size: 28px;
}

.toggleTheme {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.toggleTheme input {
  opacity: 0;
  width: 0;
  height: 0;
  display: none;
}

.slider {
  background-color: #ccc;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  transition: 0.2s;
  -webkit-transition: 0.2;
  -moz-transition: 0.2;
  -ms-transition: 0.2;
  -o-transition: 0.2;
}

.slider:before {
  background-color: #fff;
  position: absolute;
  content: '';
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  transition: 0.4s;
  -webkit-transition: 0.4s;
  -moz-transition: 0.4s;
  -ms-transition: 0.4s;
  -o-transition: 0.4s;
}

input:checked + .slider:before {
  transform: translateX(26px);
}

input:checked + .slider {
  background-color: cornflowerblue;
}

.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

